<resources>
    <string name="app_name">Piru</string>
    <string name="title_error">Error</string>
    <string name="error_message_generic">An error has occurred.</string>
    <string name="action_next">Next</string>
    <string name="title_loading">Loading…</string>
    <string name="title_intro">Activate Sleep Pill Bluetooth Low Energy</string>
    <string name="info_intro">To begin, you must activate Bluetooth Low Energy mode on your Sleep Pill. To do this, place your Sleep Pill in the tray that it came in with your Sense. The Hello logo should be face-down on the tray, and the grey hinge should line up with the indent in the tray slot. Leave in place for 10 seconds, then remove it. Your pill should be discoverable for 5 minutes after this.\n\nIf you do not have the tray, you can place a magnet over the Hello logo for 10 seconds.\n\nAfter you‘ve done this, press next.</string>
    <string name="message_no_pills">No Pills Found</string>
    <string name="title_select">Select</string>
    <string name="title_getting_started">Getting Started</string>
    <string name="title_select_sleep_pill">Select Sleep Pill</string>
    <string name="title_scanning">Scanning</string>
    <string name="dfu_status_waiting">Waiting…</string>
    <string name="dfu_status_connecting">Connecting</string>
    <string name="dfu_status_starting">Starting</string>
    <string name="dfu_status_enabling_dfu_mode">Wiping Sleep Pill firmware…</string>
    <string name="dfu_status_validation">Validating</string>
    <string name="dfu_status_disconnecting">Disconnecting</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_uploading">Uploading</string>
    <string name="action_start">Start</string>
    <string name="action_abort">Abort</string>
    <string name="title_success">Success</string>
    <string name="info_success">Your Sleep Pill‘s firmware was successfully updated to the selected image.\n\nTo verify your Sleep Pill is working correctly, you can shake it to trigger the color flash on Sense.</string>
    <string name="action_flash_another">Flash Another</string>
    <string name="action_choose_new_image">Choose New Image</string>
    <string name="action_exit">Exit</string>
    <string name="action_show_unstable">Show Unstable</string>
    <string name="action_show_stable">Show Stable</string>
    <string name="action_choose_file">Choose File…</string>
    <string name="action_sign_in">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="error_missing_email_or_password">Email and password are required.</string>
    <string name="title_downloading">Downloading…</string>
    <string name="title_select_firmware">Select Firmware</string>
    <string name="title_filter_type_stable">Stable Versions</string>
    <string name="title_filter_type_unstable">Unstable Versions</string>
    <string name="title_dfu_complete">Done</string>
</resources>
