<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/gap_outer">

    <TextView
        android:id="@+id/fragment_intro_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_outer"
        android:layout_marginBottom="@dimen/gap_outer"
        android:lineSpacingMultiplier="1.1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/title_intro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_intro_heading"
        android:lineSpacingMultiplier="1.2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/info_intro"/>

    <Button
        android:id="@+id/fragment_intro_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/action_next"
        style="@style/AppTheme.ColorButton"/>

</RelativeLayout>