<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:requiresFadingEdge="vertical"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="@dimen/shadow_height">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gap_outer">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="@dimen/gap_outer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_outer"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/action_sign_in"/>

        <EditText
            android:id="@+id/fragment_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_inter"
            android:nextFocusForward="@+id/fragment_sign_in_password"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:hint="@string/hint_email">

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/fragment_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionGo|flagNoExtractUi"
            android:hint="@string/hint_password"
            android:fontFamily="sans-serif" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="@dimen/gap_outer" />

        <Button
            android:id="@+id/fragment_sign_in_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"/>

    </LinearLayout>

</ScrollView>